fix scrollbar

--- a/view/front-end/style.css
+++ b/view/front-end/style.css
@@ -348,9 +348,16 @@ input {
  
 /* Track */
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
     -webkit-border-radius: 10px;
     border-radius: 10px;
+}
+
+::-webkit-scrollbar-track-piece {						/* Fond */
+	background: transparent none;
+	border: solid 4px transparent;
+	border-right-width: 8px;
+	margin: 4px;
 }
  
 /* Handle */
@@ -358,7 +365,7 @@ input {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     background: lightgray; 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); */
 }
 ::-webkit-scrollbar-thumb:window-inactive {
 	background: lightgray; 
